--- a/ClinicApp/Views/Shared/_Layout.cshtml
+++ b/ClinicApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Doctors" asp-action="Index">Doctors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Patients" asp-action="Index">Patient</a>
+                    </li>
                 </ul>
             </div>
         </div>
