--- a/ClinicApp/Views/Doctors/Details.cshtml
+++ b/ClinicApp/Views/Doctors/Details.cshtml
@@ -1,8 +1,9 @@
-@model Doctor
+@model DoctorVM
 
 
 <div>
     <h1>Details: </h1>
+    
     <div>
         <h1>@Model.FirstName @Model.LastName</h1>
         <p>@Model.Email</p>
