--- a/ClinicApp/Views/Patients/Index.cshtml
+++ b/ClinicApp/Views/Patients/Index.cshtml
@@ -6,14 +6,38 @@
 </p>
 <div>
     <ol>
-        @foreach (var d in Model)
+        @foreach (var p in Model)
         {
             <li>
-                <a asp-controller="Patients" asp-action="Details" asp-route-id="@d.Id">
-                    @d.FullName
+                <a asp-controller="Patients" asp-action="Details" asp-route-id="@p.Id">
+                    @p.FullName
+                </a>
+                <a class="btn btn-danger js-btn-delete" data-id="@p.Id" >
+                    <i class="bi bi-person-x"></i>
                 </a>
             </li>
         }
     </ol>
 
 </div>
+
+@section Scripts{
+    <script>
+        $(".js-btn-delete").on("click", function () {
+            const btn = $(this);
+            const id = $(this).data("id");
+            console.log(id, btn)
+            const isConfirmed = confirm("Are you sure you want to delete this doctor?");
+            if(isConfirmed){
+                $.ajax({
+                    url: `/Patients/Delete/${id}`,
+                    success: function () {
+                        btn.parents("li").remove();                    },
+                    error: function (error) {
+                        alert("An error occurred while trying to delete the patient: " + error);
+                    }
+                })
+            }
+        })
+    </script>    
+}
