--- a/ClinicApp/Views/Patients/Register.cshtml
+++ b/ClinicApp/Views/Patients/Register.cshtml
@@ -3,30 +3,36 @@
 <h1>Register</h1>
 
 <form method="post">
-    <div>
+    <div class="form-floating mb-3">
+        <input class="form-control" asp-for="FullName" />
         <label asp-for="FullName"></label>
-        <input asp-for="FullName" />
+        <span class="text-danger" asp-validation-for="FullName"></span>
     </div>
     
-    <div>
+    <div class="form-floating mb-3">
+        <input class="form-control" asp-for="NationalId" />
         <label asp-for="NationalId"></label>
-        <input asp-for="NationalId" />
+        <span class="text-danger" asp-validation-for="NationalId"></span>
+
     </div>
     
-    <div>
+    <div class="form-floating mb-3">
+        <input class="form-control" asp-for="Email" />
         <label asp-for="Email"></label>
-        <input asp-for="Email" />
+        <span class="text-danger" asp-validation-for="Email"></span>
     </div>
     
-    <div>
+    <div class="form-floating mb-3">
+        <input class="form-control" asp-for="PhoneNumber" />
         <label asp-for="PhoneNumber"></label>
-        <input asp-for="PhoneNumber" />
+        <span class="text-danger" asp-validation-for="PhoneNumber"></span>
     </div>
     
-    <div>
+    <div class="form-floating mb-3">
+        <input class="form-control" asp-for="DateOfBirth" type="date" />
         <label asp-for="DateOfBirth"></label>
-        <input asp-for="DateOfBirth" type="date" />
+        <span class="text-danger" asp-validation-for="DateOfBirth"></span>
     </div>
     
-    <button type="submit">Register</button>
+    <button class="btn btn-primary" type="submit">Register</button>
 </form>
