--- a/ClinicApp/Views/_ViewImports.cshtml
+++ b/ClinicApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ClinicApp
 @using ClinicApp.Models
+@using ClinicApp.ViewModels.Doctors
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
