--- a/ClinicApp/Views/Doctors/_Filter.cshtml
+++ b/ClinicApp/Views/Doctors/_Filter.cshtml
@@ -1,6 +1,6 @@
 @model DoctorFilterVM
 
-<form class="row row-cols-lg-auto g-3 align-items-center">
+<form class="row row-cols-lg-auto g-3 align-items-center" id="patient-doctor-form">
     <div class="form-floating mb-2 col-12">
         <input class="form-control" asp-for="Id" />
         <label asp-for="Id"></label>
@@ -17,6 +17,7 @@
         <input class="form-control" asp-for="PhoneNumber" />
         <label asp-for="PhoneNumber"></label>
     </div>
+    <input type="hidden" asp-for="Page"/>
     <div class="col-12">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
