--- a/ClinicApp/Views/Shared/_Layout.cshtml
+++ b/ClinicApp/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Patients" asp-action="Index">Patient</a>
                     </li>
                 </ul>
+                
+                <partial name="_LoginPartial"/>
             </div>
         </div>
     </nav>
