Create user by admin role

--- a/ClinicApp/Views/_ViewImports.cshtml
+++ b/ClinicApp/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ClinicApp
 @using ClinicApp.Models
 @using ClinicApp.ViewModels.Doctors
+@using ClinicApp.ViewModels.Users
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
