--- a/ClinicApp/Views/Shared/_Layout.cshtml
+++ b/ClinicApp/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Patients" asp-action="Index">Patient</a>
                     </li>
+                    @if (User.IsInRole(AppRoles.APP_ADMIN.ToString()))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Create">Create User</a>
+                        </li>
+                    }
                 </ul>
                 
                 <partial name="_LoginPartial"/>
