--- a/ClinicApp/Views/Shared/_Layout.cshtml
+++ b/ClinicApp/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Create">Create User</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Users">Users</a>
+                        </li>
                     }
                 </ul>
                 
